<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="action_signOut">Sign out</string>
    <string name="button_stats">Stats</string>
    <string name="button_addexcercise">Add excercise</string>
    <string name="button_trackExcercise">Start tracking</string>
    <string name="button_viewExcercises">View excercises</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_page">Login page</string>
    <string name="signup_page">Signup page</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_record_route">Map</string>
    <string name="network_unavailable_message">Network is unaviable</string>
    <string-array name="cardioList">
        <item> Walk</item>
        <item> Run</item>
        <item> Bike</item>
        <item> Swim</item>
    </string-array>
    <string-array name="strengthList">
        <item> Weightlifting</item>
        <item> Calisthenics</item>
    </string-array>
    <string-array name="timePeriodList">
        <item> Today</item>
        <item> This Week</item>
        <item> This Month</item>
        <item> This Year</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
